--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "fairness"]
+	path = fairness
+	url = https://github.com/kozodoi/fairness
+	shallow = true
+	registered = true
